# HexRaysCodeXplorer

src/HexRaysCodeXplorer/: CMakeLists.txt
src/cmake/: FindHexRaysSdk.cmake  FindIdaSdk.cmake
